# icfpc2020

./: Cargo.toml  README.md  build.sh  galaxy.txt  run.sh
.github/workflows/: make-submission.yaml
src/: ast.rs  interactor.rs  lib.rs  main.rs  modulator.rs  operand.rs  parser.rs  solver.rs
